--- a/app/components/publications/publication/case/contact-persons/contact-person-add-modal.hbs
+++ b/app/components/publications/publication/case/contact-persons/contact-person-add-modal.hbs
@@ -92,7 +92,10 @@
             data-test-contact-person-add-submit
             @skin="primary"
             @icon="plus"
-            @disabled={{not this.validators.areValid}}
+            @disabled={{or
+              (not this.validators.areValid)
+              this.save.isRunning
+            }}
             @loading={{this.save.isRunning}}
             {{on "click" (perform this.save)}}
           >
