--- a/app/components/publications/publication/case/contact-persons/organization-add-modal.hbs
+++ b/app/components/publications/publication/case/contact-persons/organization-add-modal.hbs
@@ -52,7 +52,10 @@
             data-test-organization-add-submit
             @skin="primary"
             @icon="plus"
-            @disabled={{not this.validators.areValid}}
+            @disabled={{or
+              (not this.validators.areValid)
+              this.save.isRunning
+            }}
             @loading={{this.save.isRunning}}
             {{on "click" (perform this.save)}}
           >
