KAS-3898 Enable indent adjustment buttons

--- a/app/components/web-components/vl-rdfa-editor.hbs
+++ b/app/components/web-components/vl-rdfa-editor.hbs
@@ -15,7 +15,7 @@
       @toolbarOptions={{hash
         showTextStyleButtons="true"
         showListButtons="true"
-        showIndentButtons=null
+        showIndentButtons="true"
       }}
     />
   {{else}}
