feat: add support for cards inside regular table
This is what is used in usertest so I guess it's what we'll implement.

--- a/app/components/k-data-table.hbs
+++ b/app/components/k-data-table.hbs
@@ -3,7 +3,8 @@
   {{if @hoverable "auk-table--hoverable"}}
   {{if @striped "auk-table--striped"}}
   {{if @stickyHeader "auk-table--sticky-header"}}
-  {{if @stickyActionColumn "auk-table--sticky-action-column"}}"
+  {{if @stickyActionColumn "auk-table--sticky-action-column"}}
+  {{if @cards "auk-card-table"}}"
   ...attributes
 >
   <thead>
