--- a/app/templates/search/agendaitems.hbs
+++ b/app/templates/search/agendaitems.hbs
@@ -48,8 +48,7 @@
     />
     <KDataTable
       data-test-route-search-agendaitems-data-table
-      @hoverable={{true}}
-      @striped={{true}}
+      @cards={{true}}
       @loading={{this.isLoadingModel}}
       @content={{this.model}}
       @page={{this.page}}
