--- a/app/styles/prototype/_search.scss
+++ b/app/styles/prototype/_search.scss
@@ -1,23 +1,19 @@
 .auk-card-table {
-  .data-table tbody tr {
+  tbody tr td {
     border: 0 !important;
   }
 
-  .data-table tbody tr td {
+  tbody tr td {
     padding: 0 !important;
     padding-bottom: $au-unit-small !important;
   }
 
-  table.data-table tbody tr:hover {
+  tbody tr:hover {
     background-color: var(--au-gray-100);
   }
 
   .container-flex--scroll {
     overflow: visible !important;
-  }
-
-  .data-table__actions--top {
-    display: none;
   }
 }
 
