--- a/app/templates/search/cases.hbs
+++ b/app/templates/search/cases.hbs
@@ -61,8 +61,7 @@
     />
     <KDataTable
       data-test-route-search-cases-data-table
-      @hoverable={{true}}
-      @striped={{true}}
+      @cards={{true}}
       @loading={{this.isLoadingModel}}
       @content={{this.model}}
       @page={{this.page}}
@@ -71,7 +70,6 @@
       @totalNumberOfItems={{this.model.meta.count}}
       @onChangeSize={{this.selectSize}}
       @onChangePage={{fn (mut this.page)}}
-      @onClickRow={{this.navigateToCase}}
     >
       <:body as |row|>
         <td>
