fix warning message shows when bronbestand was docx file before converting I added a workaround using a timeout that shows the warning after 0.5s if there's a docx file

--- a/app/components/documents/document-view.hbs
+++ b/app/components/documents/document-view.hbs
@@ -6,7 +6,7 @@
       class="pdf-view"
     >
     </object>
-  {{else}}
+  {{else if this.showWarning}}
     <div class="auk-u-p-4">
       <Auk::Alert
         @skin="warning"
