chore: use kebab-case for confidentiality-level translation string

--- a/app/templates/search/documents.hbs
+++ b/app/templates/search/documents.hbs
@@ -51,7 +51,7 @@
           class="auk-table__col--2"
           @currentSorting={{this.sort}}
           @field="confidentialityLevel"
-          @label={{t "confidentialityLevel"}}
+          @label={{t "confidentiality-level"}}
           @onChange={{this.selectSort}}
         />
         <th class="auk-table__col--1"></th>
