--- a/app/templates/search/agendaitems.hbs
+++ b/app/templates/search/agendaitems.hbs
@@ -57,6 +57,7 @@
       @totalNumberOfItems={{this.model.meta.count}}
       @onChangeSize={{fn (mut this.size)}}
       @onChangePage={{fn (mut this.page)}}
+      @onClickRow={{this.navigateToAgendaitem}}
     >
       <:body as |row|>
         <td>
