--- a/app/templates/search/news-items.hbs
+++ b/app/templates/search/news-items.hbs
@@ -22,6 +22,7 @@
       @totalNumberOfItems={{this.model.meta.count}}
       @onChangeSize={{fn (mut this.size)}}
       @onChangePage={{fn (mut this.page)}}
+      @onClickRow={{this.navigateToNewsletter}}
     >
       <:body as |row|>
         <td>
