test: add selector for agendaitem short title in result card

--- a/app/components/search/result-cards/agendaitem.hbs
+++ b/app/components/search/result-cards/agendaitem.hbs
@@ -24,6 +24,7 @@
         @models={{array @meetingId @agendaId @agendaItemId}}
       >
         <SanitizeHtml
+          data-test-route-search-agendaitems-row-shorttitle
           @raw={{true}}
           @value={{if @shortTitle @shortTitle @title}}
         />
