Revert "removed the toggle for "Toon aangepaste punten" in agenda"
This reverts commit 8c48008fda7c1e4d075236d11ea4b5bde9cec2e9.

--- a/app/components/agenda/agenda-detail/sidebar.hbs
+++ b/app/components/agenda/agenda-detail/sidebar.hbs
@@ -7,6 +7,17 @@
         </h4>
       </Auk::Toolbar::Item>
     </Auk::Toolbar::Group>
+    <Auk::Toolbar::Group @position="right">
+      <Auk::Toolbar::Item>
+        {{!-- TODO: this button needs to be displayed in a smaller size --}}
+        <AuButton
+          @skin="link"
+          {{on "click" @toggleShowModifiedOnly}}
+        >
+          {{if @showModifiedOnly (t "show-all") (t "show-changes")}}
+        </AuButton>
+      </Auk::Toolbar::Item>
+    </Auk::Toolbar::Group>
   </Auk::Toolbar>
 </Auk::Navbar>
 <div>
