--- a/app/components/agenda/agenda-overview.hbs
+++ b/app/components/agenda/agenda-overview.hbs
@@ -20,6 +20,13 @@
     <Auk::Toolbar::Group @position="right">
       <Auk::Toolbar::Item>
         <AuButtonGroup>
+          <AuButton
+            data-test-agenda-overview-show-changes={{true}}
+            @skin="naked"
+            {{on "click" @toggleShowModifiedOnly}}
+          >
+            {{if @showModifiedOnly (t "show-all") (t "show-changes")}}
+          </AuButton>
           {{#if this.canEdit}}
             {{#unless @isEditingOverview}}
               <AuButton
