--- a/app/templates/search/news-items.hbs
+++ b/app/templates/search/news-items.hbs
@@ -55,7 +55,7 @@
             </h3>
             <p class="auk-u-mr-2">
               <AuContent>
-                <SanitizeHtml @raw={{true}} @value={{row.htmlContent}} @options={{this.sanitizeHtmlOptions}} />
+                <SanitizeHtml @raw={{true}} @value={{row.htmlContent}} />
               </AuContent>
             </p>
           </td>
